@@ -192,7 +192,7 @@ So offending extensions should be updated!</p>
 Czech translation &copy; 2011 Josef Nemec<br>
 Danish translation &copy; 2011 Jens Maegaard<br>
 French translation &copy; 2011 Patrick Varlet<br>
-Russian translation &copy; 2012 Viktor Klim<br>
+Russian translation &copy; 2012 Lybomyr Kydray<br>
 Polish translation &copy; 2012 Kamil Krzes</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
