@@ -1,6 +1,7 @@
 Version 1pl7 - released 2012-09-20
 cmb     removed javascript: pseudo protocoll
 cmb     fixed typo in English language file
+cmb     updated Russian language file (contributed by old)
 
 Version 1pl6 - released 2012-08-20
 cmb     added $encoding argument to htmlspecialchars() calls
